# esp32-reusable

./: .gitignore  CRATE_DISTILLATION.md  Cargo.toml  EXPANDED_HARDWARE_STACK_USE_CASES_2026-06-30.md  HIGH_ROI_ESP32_STACK_RESEARCH_2026-06-30.md  README.md
.github/workflows/: ci.yml
crates/ri-esp-board-profiles/: Cargo.toml  README.md
crates/ri-esp-board-profiles/src/: lib.rs
crates/ri-esp-core/: Cargo.toml  README.md
crates/ri-esp-core/src/: lib.rs
crates/ri-esp-display/: Cargo.toml  README.md
crates/ri-esp-display/src/: hd44780_pcf8574.rs  ili9341_bitbang.rs  lib.rs
crates/ri-esp-llm/: Cargo.toml  README.md
crates/ri-esp-llm/examples/: compressed_attention_bench.rs
crates/ri-esp-llm/src/: compressed_attention.rs  int4.rs  kv_cache.rs  lib.rs  rnn.rs  sample.rs
crates/ri-esp-local-language/: Cargo.toml  README.md
crates/ri-esp-local-language/src/: lib.rs
crates/ri-esp-local-language/tests/: canonical_table.rs  exported_contract.rs
crates/ri-esp-policy/: Cargo.toml  README.md
crates/ri-esp-policy/src/: lib.rs
crates/ri-esp-policy/tests/: policy_cases.rs
crates/ri-esp-proof/: Cargo.toml  LICENSE-APACHE  PROOF_RECEIPT_SCHEMA.md  README.md
crates/ri-esp-proof/src/: lib.rs
crates/ri-esp-proof/tests/: proof_flow.rs
crates/ri-esp-tiered/: Cargo.toml  README.md
crates/ri-esp-tiered/src/: lib.rs
docs/plans/: 2026-07-01-sensor-policy-s3-local-language-crate-modularization.md
