[package]
name = "ri-esp-display"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "no_std display drivers for ESP32: HD44780+PCF8574 I2C LCD and ILI9341 bit-bang SPI TFT"
repository = "https://github.com/RecursiveIntell/esp32-reusable"
homepage = "https://github.com/RecursiveIntell/esp32-reusable"
documentation = "https://docs.rs/ri-esp-display"
readme = "README.md"
keywords = ["esp32", "display", "no-std", "embedded", "lcd"]
categories = ["embedded", "no-std"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "README.md",
  "assets/**",
  "Cargo.toml",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[dependencies]
embedded-hal.workspace = true
heapless.workspace = true
