[package]
name = "ri-esp-local-language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "no_std contract crate for ESP32-S3 local-language layer: canonical prompt/output table and receipt schemas"
repository = "https://github.com/RecursiveIntell/esp32-reusable"
homepage = "https://github.com/RecursiveIntell/esp32-reusable"
documentation = "https://docs.rs/ri-esp-local-language"
readme = "README.md"
keywords = ["esp32", "receipts", "no-std", "edge-ai", "iot"]
categories = ["embedded", "no-std"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "README.md",
  "assets/**",
  "Cargo.toml",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[dependencies]
heapless.workspace = true
ri-esp-policy = { path = "../ri-esp-policy", version = "0.1.1" }
