[package]
name = "ri-esp-proof"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "no_std proof/receipt crate for ESP32/S3: sensor reading + sentinel confidence -> routing decision -> JSON receipt"
repository = "https://github.com/RecursiveIntell/esp32-reusable"
homepage = "https://github.com/RecursiveIntell/esp32-reusable"
documentation = "https://docs.rs/ri-esp-proof"
readme = "README.md"
keywords = ["esp32", "receipts", "no-std", "edge-ai", "iot"]
categories = ["embedded", "no-std"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "README.md",
  "assets/**",
  "Cargo.toml",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[dependencies]
heapless.workspace = true
ri-esp-core = { path = "../ri-esp-core", version = "0.1.1" }
ri-esp-local-language = { path = "../ri-esp-local-language", version = "0.1.1" }
ri-esp-policy = { path = "../ri-esp-policy", version = "0.1.1" }
ri-esp-tiered = { path = "../ri-esp-tiered", version = "0.1.1" }
