[package]
name = "ri-esp-tiered"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "no_std fixed-size wire payloads for ESP32 sensor/AI endpoint tiered forwarding"
repository = "https://github.com/RecursiveIntell/esp32-reusable"
homepage = "https://github.com/RecursiveIntell/esp32-reusable"
documentation = "https://docs.rs/ri-esp-tiered"
readme = "README.md"
keywords = ["esp32", "edge-ai", "no-std", "embedded", "iot"]
categories = ["embedded", "no-std"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "README.md",
  "assets/**",
  "Cargo.toml",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[dependencies]
heapless.workspace = true
